feat: ascii docs, gradle